--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
     <script>
         // ============================================
-        // SUPABASE CREDENTIALS (NOW CONFIGURED)
+        // SUPABASE CREDENTIALS (CONFIGURED)
         // ============================================
         const SUPABASE_URL = 'https://imiljivxosyrcosznklh.supabase.co';
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImltaWxqaXZ4b3N5cmNvc3pua2xoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxMTIwOTcsImV4cCI6MjA3OTY4ODA5N30.TOgeuC3-RdG2ywIxDz2NWRhLHI4gxTkG4pilaZBqhso';
