--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ ${state.currentAlbum.name}
                                 `).join('')}
                             </div>
                             <div class="mt-12 p-6 bg-red-900/30 rounded-xl border border-red-700">
-                                <h3 class="text-xl font-bold text-red-400 mb-4 flex items-center"><svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.503-1.637 1.748-3.048L13.82 4.1a2 2 0 00-3.64 0L4.19 16.952c-.755 1.411.218 3.048 1.748 3.048z"/></svg>DANGER ZONE</h3>
+                                <h3 class="text-xl font-bold text-red-400 mb-4 flex items-center"><svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.503-1.637 1.748-3.048L13.82 4.1a2 2 0 00-3.64 0L4.19 16.952c-.755 1.411.218 3.048 1.748 3.048z"/></svg>CAUTION</h3>
                                 <div class="flex flex-col sm:flex-row gap-4">
                                     <button onclick="expireOTP()" class="flex-1 w-full bg-yellow-600 hover:bg-yellow-700 text-white py-3 rounded-xl font-bold text-sm shadow-md transition-all duration-300">
                                         <svg class="w-5 h-5 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 18.364A9 9 0 0012 9V6m12 6a9 9 0 01-9 9m-6.364-6.364L6 18m3-2l4-4"/></svg>
@@ -675,3 +675,4 @@ ${state.currentAlbum.name}
     </script>
 </body>
 </html>
+
