--- a/index.html
+++ b/index.html
@@ -546,10 +546,12 @@
                                     About Amanah
                                 </h3>
                                 <p class="text-sm text-gray-400 mb-3 leading-relaxed">
-                                    Amanah was conceived out of a genuine need for digital security in sensitive, private matters like matrimonial profile sharing.
+                                   Amanah is a secure, closed platform for sharing matrimony photos — built to prevent uncontrolled forwarding, misuse, and endless circulation. Every photo is shared with clear consent, control, and accountability, so it reaches only the intended recipient.
+                                   Rooted in the values of trust, dignity, and responsible usage, Amanah enables intentional photo sharing where the sender remains in control at all times.
+
                                 </p>
                                 <p class="text-xs text-gray-500 leading-relaxed mb-4">
-                                    Syed applies his operational expertise and customer-centric approach as a Senior Manager at a WealthTech firm. Alongside his full-time role, he advises early-stage startups in the wealth management space on operations, compliance, and customer experience. He is also passionate about building Amanah as a focused initiative in the secure and controlled photo-sharing space, driven by a strong emphasis on trust, consent, and responsible usage.
+                                   Amanah is founded by Syed, a Bangalore-based startup enthusiast with hands-on experience in building customer-first, compliant systems. Shaped by personal experience and real-world gaps, Amanah is a founder-led initiative focused on building trust-first products that solve problems that truly matter.
                                 </p>
                             </div>
                             <div>
@@ -769,3 +771,4 @@
     </script>
 </body>
 </html>
+
