--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@ This is an automated alert from the Amanah reporting system.
                 <div class="max-w-xl mx-auto px-4 pt-24 min-h-screen">
                     <h2 class="text-3xl font-extrabold text-white mb-6 border-b border-gray-700 pb-3 text-center">Manage Existing Album</h2>
                     <div class="bg-gray-800 p-6 rounded-xl card-shadow mb-8 border border-orange-500">
-                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Uploader Email</h3>
+                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Email Address</h3>
                         <p class="text-gray-400 text-sm mb-4">Please enter the email address used to create the album to access management controls.</p>
                         <div class="space-y-4">
                             <div>
@@ -859,7 +859,7 @@ This is an automated alert from the Amanah reporting system.
                             <div>
                                 <label for="viewer-otp" class="block text-sm font-medium text-gray-400">One-Time Passcode (OTP)</label>
                                 <input type="text" id="viewer-otp" oninput="updateViewerOtp(this)" value="${state.viewerOtp}"
-                                    class="mt-1 block w-full bg-gray-700 border border-gray-600 rounded-md shadow-sm p-3 text-2xl font-mono text-center text-white focus:ring-green-500 focus:border-green-500" maxlength="6" placeholder="e.g., 123456" required>
+                                    class="mt-1 block w-full bg-gray-700 border border-gray-600 rounded-md shadow-sm p-3 text-2xl font-mono text-center text-white focus:ring-green-500 focus:border-green-500" maxlength="6" placeholder="ex 123456" required>
                             </div>
                         </div>
                     </div>
@@ -955,7 +955,7 @@ This is an automated alert from the Amanah reporting system.
                                         <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/></svg>
                                     </div>
                                     <h4 class="font-bold text-xl text-white mb-3">Loss of Control</h4>
-                                    <p class="text-gray-300 text-sm leading-relaxed">Recipient saves to gallery, forwards to relatives, brokers, and WhatsApp groups without permission</p>
+                                    <p class="text-gray-300 text-sm leading-relaxed">Recipient saves to gallery, can forward to relatives, brokers, and WhatsApp groups without permission</p>
                                 </div>
 
                                 <div class="bg-gradient-to-b from-gray-800 to-gray-900 border-2 border-gray-600 rounded-xl p-6 text-center hover:border-red-500 transition-all duration-300 transform hover:scale-105 hover:shadow-xl">
@@ -1377,5 +1377,6 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
 
 
