--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ This is an automated alert from the Amanah reporting system.
                                         <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"/></svg>
                                     </div>
                                     <h4 class="font-bold text-xl text-white mb-3">Loss of Control</h4>
-                                    <p class="text-gray-300 text-sm leading-relaxed">Recipient saves to gallery, can forward to relatives, brokers, and WhatsApp groups without permission</p>
+                                    <p class="text-gray-300 text-sm leading-relaxed">Recipient saves to gallery, forwards to relatives, marriage brokers, and WhatsApp groups without permission</p>
                                 </div>
 
                                 <div class="bg-gradient-to-b from-gray-800 to-gray-900 border-2 border-gray-600 rounded-xl p-6 text-center hover:border-red-500 transition-all duration-300 transform hover:scale-105 hover:shadow-xl">
@@ -1377,6 +1377,7 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
 
 
 
