--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ This is an automated alert from the Amanah reporting system.
                 `.trim();
                 
                 // Using a simple mailto link approach (can be enhanced with email API)
-                const mailtoLink = `mailto:help.amanahapp@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+                const mailtoLink = `mailto:support@picamanah.space?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
                 
                 // Trigger email client
                 window.location.href = mailtoLink;
@@ -557,7 +557,7 @@ This is an automated alert from the Amanah reporting system.
                 render();
             } catch (error) {
                 console.error('Report error:', error);
-                alert('Failed to submit report. Please try again or contact help.amanahapp@gmail.com directly.');
+                alert('Failed to submit report. Please try again or contact support@picamanah.space directly.');
                 state.loading = false;
                 render();
             }
@@ -727,7 +727,7 @@ This is an automated alert from the Amanah reporting system.
                             <div>
                                 <h3 class="text-lg font-bold mb-4 text-purple-400">Contact</h3>
                                 <p class="text-sm text-gray-400 mb-2">Email:</p>
-                                <a href="mailto:help.amanahapp@gmail.com" class="text-purple-300 hover:text-purple-100 text-sm underline">help.amanahapp@gmail.com</a>
+                                <a href="mailto:support@picamanah.space" class="text-purple-300 hover:text-purple-100 text-sm underline">support@picamanah.space</a>
                                 <div class="mt-4">
                                     <a href="https://www.linkedin.com/in/syed-rashad/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-blue-400 hover:text-blue-300 transition-colors">
                                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
@@ -1377,3 +1377,4 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
