--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 verifyFormComplete = isComplete;
                 render();
             }
+            return isComplete;
         }
 
         function updateAlbumId(input) {
@@ -957,7 +958,7 @@ This is an automated alert from the Amanah reporting system.
                 <div class="max-w-xl mx-auto px-4 pt-24 min-h-screen">
                     <h2 class="text-3xl font-extrabold text-white mb-6 border-b border-gray-700 pb-3 text-center">Manage Existing Album</h2>
                     <div class="bg-gray-800 p-6 rounded-xl card-shadow mb-8 border border-orange-500">
-                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Email</h3>
+                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Uploader Email</h3>
                         <p class="text-gray-400 text-sm mb-4">Please enter the email address used to create the album to access management controls.</p>
                         <div class="space-y-4">
                             <div>
