--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Amanah - Secure marriage profile photo sharing with OTP protection by Syed Rashad">
+    <meta name="description" content="Amanah - Secure matrimony profile photo sharing with OTP protection by Syed Rashad">
     <title>Amanah - Secure Photo Sharing</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -1031,7 +1031,7 @@ This is an automated alert from the Amanah reporting system.
                         </h1>
 
                         <p class="text-xl text-purple-400 mb-6 font-semibold">
-                            Share Marriage Photos Without Losing Control
+                            Share Matrimony Photos Without Losing Control
                         </p>
 
                         <p class="text-lg text-gray-300 max-w-4xl mx-auto leading-relaxed mb-2">
@@ -1090,7 +1090,7 @@ This is an automated alert from the Amanah reporting system.
                                         <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"/></svg>
                                     </div>
                                     <h4 class="font-bold text-xl text-white mb-3">Intention</h4>
-                                    <p class="text-gray-300 text-sm leading-relaxed">Photo shared with a single trusted person via WhatsApp or email for marriage discussions</p>
+                                    <p class="text-gray-300 text-sm leading-relaxed">Photo shared with a single trusted person via WhatsApp or email for matrimony discussions</p>
                                 </div>
 
                                 <div class="bg-gradient-to-b from-gray-800 to-gray-900 border-2 border-gray-600 rounded-xl p-6 text-center hover:border-yellow-500 transition-all duration-300 transform hover:scale-105 hover:shadow-xl">
@@ -1541,3 +1541,4 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
