--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@ This is an automated alert from the Amanah reporting system.
                 <div class="max-w-xl mx-auto px-4 pt-24 min-h-screen">
                     <h2 class="text-3xl font-extrabold text-white mb-6 border-b border-gray-700 pb-3 text-center">Manage Existing Album</h2>
                     <div class="bg-gray-800 p-6 rounded-xl card-shadow mb-8 border border-orange-500">
-                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Uploader Email</h3>
+                        <h3 class="text-xl font-bold text-orange-400 mb-4">Enter Email</h3>
                         <p class="text-gray-400 text-sm mb-4">Please enter the email address used to create the album to access management controls.</p>
                         <div class="space-y-4">
                             <div>
@@ -1054,7 +1054,7 @@ This is an automated alert from the Amanah reporting system.
                             'purple',
                             '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"/>',
                             '<p>• Upload a max of 4 photos securely</p><p>• OTP-protected access for 24h</p><p>• You maintain full ownership</p>',
-                            'Start New Upload',
+                            'Upload Photos',
                             "nav('upload')"
                         )}
 
@@ -1541,4 +1541,5 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
 
