--- a/index.html
+++ b/index.html
@@ -1061,8 +1061,8 @@ This is an automated alert from the Amanah reporting system.
                         ${actionCard(
                             'Manage Access',
                             'orange',
-                            '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0M19.423 9.771c.732-1.38 1.157-2.915 1.157-4.526M4.577 9.771c-.732-1.38-1.157-2.915-1.157-4.526M10.325 19.683c-.426 1.756-2.924 1.756-3.35 0M4.577 14.229c.732 1.38 1.157 2.915 1.157 4.526M14.229 19.423c1.38-.732 2.915-1.157 4.526-1.157M19.423 14.229c-.732 1.38-1.157 2.915-1.157 4.526M12 12a3 3 0 100-6 3 3 0 000 6z"/>',
-                            '<p>• Regenerate or expire OTP instantly</p><p>• Delete albums anytime, permanently</p><p>• Revoke viewer access on demand</p>',
+                            `<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />`,
+                            `• Regenerate or expire OTP instantly<br>• Delete albums anytime, permanently<br>• Revoke viewer access on demand`,
                             'Manage Album',
                             "nav('manage')"
                         )}
@@ -1541,5 +1541,6 @@ This is an automated alert from the Amanah reporting system.
     </script>
 </body>
 </html>
+
 
 
